✅: correcao de code smells e sql