@@ -11,7 +11,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Service
@@ -45,7 +44,7 @@ public class WishService {
         var wishes = wishRepository.findByUserId(user.getId());
         return wishes.stream()
                 .map(wish -> new GameResponseDTO(wish.getGame()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Long> getWishedGamesIds(Long userId) {
